--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-# Modules
+# Folders
 /node_modules
+dist
+scss
+
+# eslint
+.eslintrc
+.eslintignore
 
 # Project
+babel.config.json
 requirements.txt
 
 # System
